sass/base/_media.scss
@media (max-width: 901px) {
    .promo {
        .header {
            justify-content: space-around;
        }
        &__wrapper {
            align-items: center;
        }
    }
    .advantages {
        &__wrapper {
            width: 100%;
        }
    }
    .consultation {
        .title_consultation {
            text-align: center;
        }
        &__descr {
            text-align: center;
        }
        &__form-wrapper {
            justify-content: center;
        }
    }
    .slider {
        padding: 29px 0;
    }
    .catalogue {
        &__content {
            justify-content: space-evenly;
        }
    }
    .reviews {
        &__descr-wrapper {
            margin-left: 18px;
        }
        &__descr {
            width: 100%;
        }
    }
    .footer {
        &__info {
            width: 377px;
            height: 212px;
            padding: 9px 32px 11px 28px;
        }
    }
}

@media (max-width: 767px) {
    .promo {
        .header {
            &__logo {
                img {
                    width: 80%;
                }
            }
            &__phone {
                font-size: 16px;
            }
        }
        &__wrapper {
            margin-top: 48px;
        }
    }
    .advantages {
        min-height: 450px;
        padding-top:40px;  
    }
    .consultation {
        padding-top: 46px;
    }
    .slider{
        padding: 25px 0 25px 0;
        &__inner {
            width: 100%;
        }
        .slick-slide{
            img {
                height: 324px;
                margin: 0 auto;
            }
        }
    }
    .reviews {
        &__descr-wrapper {
            margin-left: 32px;
        }
    }
    .catalogue {
        &__tabs {
            padding-right: 10px;
            padding-left: 10px;
        }
    }
    .footer {
        &__info {
            width: 330px;
            height: 234px;
            padding: 20px 68px 60px 68px
        }
    }
    .pageup {
        bottom: 14px;
        right: 16px
    }
}
@media (max-width: 575px) {
    .promo {
        min-height: 560px;
        padding: 0;
        .header {
            &__phone {
                font-size: 16px;
            }
            &__official {
                span {
                    font-size: 16px;
                }
            }
            &__logo {
                display: none;
            }
        }
        &__header {
            font-size: 26px;
            line-height: 26px;
            text-align: center;
        }
        &__subheader {
            font-size: 15px;
            line-height: 15px;
            text-align: center;
        }
        &__wrapper {
            margin-top: 30px;
        }
        &__icons {
            width: 100%;
            justify-content: space-around;
        }
    }
    .advantages {
        width: 100%;
        &__wrapper {
            width: 100%;
        }
        &__icons {
            justify-content: center;
            flex-direction: column;
            align-items: center;
        }
        &__item {
            margin-bottom: 7px;
            span {
                margin-bottom: 0;
                font-size: 17px;
            }
        }
    }
    .consultation {
        .title {
            font-size: 22px;
            line-height: 36px;
        }
        &__descr {
            font-size: 17px;
            line-height: 28px;
        }
    }
    .slider {
        .slick-slide{
            img {
                height: 181px;
            }
        }
    }
    .catalogue {
        &__tabs {
            margin-top: 0;
            width: 100%;
            padding-left: 11px;
        }
        &__tab {
            display: flex;
            justify-content: center;
            align-items: center;
            font-size: 13px;
            line-height: 19px;
            transform: skewX(-24deg);
        }
    }
    .reviews {
        &__review {
            margin-top: 25px;
            flex-direction: column;
            img {
                margin: 0 auto;
            }
        }
        &__name {
            text-align: center;
            margin-top: 15px;
        }
        &__progress {
            text-align: center;
        }
    }
    .footer {
        &__info {
            width: 100%;
            height: 123px;
            position: initial;
            padding: 0;
            transform: none;
        }
        &__adress {
            margin-bottom: 0;
        }
        &__phone {
            margin-bottom: 3px;
        }
    }
}
@media (max-width: 320px) {
    .promo {
        .header {
            &__logo {
                display: none;
            }
            &__official {
                font-size: 11px;
                span {
                    font-size: 18px;
                }
            }
            &__contacts {
                display: none;
            }
        }
        &__wrapper {
            margin-top: 12px;
        }
        &__header {
            font-size: 17px;
        }
        &__subheader {
            font-size: 11px;
            margin-top: 10px;
        }
        &__icons{
            flex-direction: column;
            justify-content: center;
            align-items: center;
            margin-top: 30px;
            width: 100%px;
        }
        &__icon {
            margin-bottom: 10px;
            img {
                width: 45px;
            }
        }
        .button_main {
            margin-top: 17px;
            width: 100%;
        }
    }
    .advantages {
        padding-top: 20px;
        .title_advantages {
            font-size: 24px;
        }
        &__wrapper {
            margin-top: 22px;
        }
        &__icons {
            flex-direction: column;
            justify-content: center;
            align-items: center;
        }
        &__item {
            width: 100%;
            font-size: 16px;
            margin-bottom: 8px;
        }
    }
    .consultation {
        min-height: 474px;
        padding: 18px 5px 18px 5px;
        .title_consultation {
            font-size: 18px;
            line-height: 25px;
        }
        &__descr {
            font-size: 14px;
            line-height: 20px;
        }
        .feed-form {
            width: 95%;
            .button_consultation {
                width: 100%;
                font-size: 15px;
                line-height: 15px;
            }
        }
    }
    .slider {
        &__inner {
            width: 100%;
        }
        .slick-slide{
            img {
                height: 121px;
            }
        }
    }
    .catalogue {
        padding-bottom: 23px;
        .title {
            font-size: 25px;
        }
        &__tabs {
            padding-left: 11px;
        }
        &__tab {
            margin: 0 1px;
            width: 202px;
            height: 46px;
            font-size: 9px;
            line-height: 13px;
            transform: skewX(-24deg);
        }
        &__content {
            margin-top: 10px;
            .catalogue-item {
                width: 95%;
                &__img {
                    height: 145px;
                }
                &__promo {
                    margin-right: 0px;
                    img {
                        height: 150px;
                    }
                }
                &__promo-descr {
                    padding-left: 0px;
                    ul {
                        padding-left: 7px;
                        li {
                            margin-bottom: 9px;
                        }
                    }
                }
                &__link_back {
                    bottom: 35px;
                }
                hr {
                    margin-top: 0px;
                }
                &__wrapper {
                    height: 330px;
                }
                &__footer {

                }
                &__old-price {
                    font-size: 13px;
                }
                &__price {
                    font-size: 20px;
                    line-height: 20px;
                }
            }
        }
    }
    .reviews {
        &__descr-wrapper {
            margin-left: 0;
        }
        &__descr {
            font-size: 13px;
            line-height: 16px;
            span {
                margin-top: 12px;
            }
        }
    }
    .footer {
        &__info {
            width: 100%;
            height: 123px;
            position: initial;
            padding: 0;
            transform: none;
        }
        &__adress {
            margin-bottom: 0;
        }
        &__phone {
            margin-bottom: 3px;
        }
        iframe {
            height: 442px;
        }
    }
    .modal {
        padding: 25px 30px 40px 26px;
        width: 258px;
        min-height: 382px;
        &__close {
            top: -9px;
            right: 23px;
            font-size: 38px;
        }
        .feed-form {
            width: 100%;
            margin-top: 23px;
        }
        .button_consultation {
            width: 100%;
        }
        .feed-form {
            label.error {
                margin-bottom: 0px;
                font-size: 13px;
            }
            input.error {
                margin-bottom: 2px;
            }     
        }
    }
}

